--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next",
+    "build": "next build",
     "start": "next start"
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/saratonite/react-coding-challenge#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
